2010-05-07  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #601141
	* class.cs: Update all partial modifiers.

2010-05-06  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #601708
	* method.cs, membercache.cs: Destructors cannot be hidden.

2010-05-06  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #602551
	* class.cs: Resursive reference of type definition is allowed.

2010-05-06  Marek Safar  <marek.safar@gmail.com>

	* anonymous.cs: Mutate cached storey instance types too.

2010-05-06  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #602443
	* convert.cs: Explicit enum conversion cannot involve user operators

2010-05-05  Miguel de Icaza  <miguel@novell.com>

	* class.cs (TypeContainer.DefineBaseTypes)
	(TypeContainer.CheckRecursiveDefinition): check for the iface not
	being null, as we could have failed resolution and crashed;
	Fixes #442144

	* cs-parser.jay: Productions to catch common mistakes when other
	punctuation operators are used instead of comma.   Fixes 571702	

2010-05-05  Marek Safar  <marek.safar@gmail.com>

	* anonymous.cs: Mutate correct set of constraints.

2010-05-05  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #602842
	* expression.cs: Resolve all array bound arguments.

2010-05-05  Marek Safar  <marek.safar@gmail.com>

	* import.cs: Don't import private fields.

2010-04-30  Marek Safar  <marek.safar@gmail.com>

	Partially based on patch by <sami.lamti@gmail.com>

	* eval.cs, ecore.cs: Fixed eval show methods.

2010-04-30  Marek Safar  <marek.safar@gmail.com>

	* generic.cs, delegate.cs: Implement output type inference of
	methodgroup now when the specification was cleared at least little
	bit.

2010-04-29  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #575611
	* class.cs: Fix recursive unmanaged recursice sruct check.
	
2010-04-29  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #479776
	* expression.cs: Implement typeof unbounded nested generic types.
